# local-ai-research

./: .gitignore  README.md  pyproject.toml
script/: graph.py  prompts.py  schemas.py
scripts/: graph.py  prompts.py  schemas.py
