[project]
name = "local-ai-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.4",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
    "tavily-python>=0.7.10",
]
